# podbook

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  podbook.py  pyproject.toml  requirements.txt
backend/src/: __main__.py
backend/src/static/: clipboard.min.js  feed_clipboard.js  jquery-3.1.1.slim.min.js
client/: package-lock.json  package.json
client/src/: variables.scss
client/src/lib/: AuthorCard.svelte  CopyToClipboardLink.svelte  Title.svelte
client/src/routes/: +layout.svelte
frontend/: .prettierignore  biome.jsonc  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: AuthorCard.svelte
frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
podbook/: __main__.py
podbook/templates/: index.html
server/src/: __main__.py
server/src/static/: bootstrap.min.js
src/back/: __main__.py
src/back/templates/: index.html
src/podbook_rebound/: __main__.py
src/podbook_rebound/static/: feed_clipboard.js
