[project]
name = "podbook-rebound"
version = "0.2.0"
description = "Serve up audiobooks as if they were podcasts."
dependencies = [
    "feedgen>=1.0.0",
    "pyyaml>=6.0.1",
    "gunicorn>=22.0.0",
    "tinytag>=1.10.1",
    "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.5",
    "pre-commit>=3.7.1",
]

[tool.rye.scripts]
server = { cmd = ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "server.src.__main__:app"] }
devserver = { cmd = ["fastapi", "dev", "server/src/__main__.py"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server/src"]
